# shush

./: .gitignore  Cargo.toml  IDEA.md  Makefile  README.md
.serena/: project.yml
src/commands/: install_hooks.rs  scan.rs
src/vault/: crypto.rs  mod.rs
